--- a/Scripts/_M1A-CEBP_IntercModel.Rmd
+++ b/Scripts/_M1A-CEBP_IntercModel.Rmd
@@ -438,6 +438,424 @@ write_tsv(isoTotalSeerDraw.frm,
 
 # Basic interception model scenarios
 
+Generate the basic scenarios
+and models whatever cancer incidence is supplied: currently uses all cancer
+
+* Idealized screening, dwell scenarios 1-4, with annual screening, prevalent and incident results  
+
+* generate the big data frame that allows slicing/dicing the data 
+for figure production in the paper    
+
+* write the big data frame to a file to ensure summary stats start from a fixed item.  
+
+## Define functions: Standard dwell model {-}
+
+```{r m1a-load-seer-dwell-model}
+
+load_seer_dwell_model <- function(origin_host_dir="../extData"){
+
+  xStage<-c("I","II","III","IV")
+
+  dwell_model_group_df <-
+  read_tsv(sprintf("%s/20200728_dwell_time_groups.tsv",origin_host_dir))
+
+  dwell_model_timing_df <- 
+  read_tsv(sprintf("%s/20200728_dwell_group_timing.tsv",origin_host_dir))
+
+  dwell_model_all_df <- dwell_model_group_df %>%
+    rename(dwell_group=group) %>%
+    full_join(dwell_model_timing_df %>% rename(dwell_group=group)) %>%
+    mutate(number_stage=match(Stage,xStage))
+
+  dwell_model_all_df
+}
+
+```
+
+## Define functions: Slip rate from model {-}
+
+exact: integrate over those missed during a screening interval
+see supplemental information for argument that this function is appropriate
+
+```{r ma2-slip-rate-from-model}
+
+
+integrate_slip_rate <- function(screen_interval, weibull_shape, dwell){
+  # slip rate
+  # yield of escape = integral cumululate distribution function F(t), 0<t<screen_interval
+  # mean of weibull = scale*gamma(1+1/shape)
+  dwell_scale <- dwell/gamma(1+1/weibull_shape)
+  tiny_delta <- 365
+  #trapezoidal integration
+  days_low <- seq(0,screen_interval*tiny_delta-1,by=1)/tiny_delta
+  days_hi <- days_low+1/tiny_delta
+
+  F_by_day <- 0.5*(
+   pweibull(days_low, shape=weibull_shape, scale=dwell_scale) + 
+   pweibull(days_hi, shape=weibull_shape, scale=dwell_scale))
+
+  escaped_yield <- sum(F_by_day)*(1/tiny_delta) #day width in years
+  #convert to slip rate: how many missed
+  total_yield <- screen_interval #total incidence is just duration
+  slip_rate <- escaped_yield/total_yield
+  slip_rate
+}
+
+
+#use integrated weibull cumulative distribution functions
+#"exact" solution to slip rate
+exact_slip_rate_from_dwell <- function(dwell_model_all_df,screen_interval=1,weibull_shape=1){
+  
+   #slip is "before clinical"
+  #slip_clinical = "at stage of clinical detection"
+  #assume expected is half-duration of stage of clinical detection
+  #completeness in modeling
+  dwell_slip_df <- dwell_model_all_df %>%
+  mutate(
+  slip = sapply(dwell,function(z){integrate_slip_rate(screen_interval,weibull_shape,z)}),
+  slip_clinical=sapply(dwell*0.5,function(z){integrate_slip_rate(screen_interval,weibull_shape,z)}),
+  screen_interval=screen_interval
+       )
+  
+  dwell_ideal_df  <-  dwell_slip_df %>%
+    filter(scenario==1) %>%
+    mutate(dwell=10000,slip=0,slip_clinical=0,scenario=as.integer(0),screen_interval=NA)
+  
+  #add "scenario 0" perfect interception
+  dwell_slip_df <- bind_rows(dwell_slip_df,dwell_ideal_df)
+  dwell_slip_df
+}
+
+```
+
+
+## Define functions: Run intercept model {-} 
+
+```{r run-intercept-model}
+
+xStage<-c("I","II","III","IV")
+
+#okay: this multiplies a final destination IR: 
+# all the people who wind up at some final destination
+#so everything scales within itself
+#assume stage IV destination unless the cases are stopped earlier
+effective_sens <- function(cumulative_sens, dwell_detect_rate){
+  detect<-rep(0,length(cumulative_sens))
+  miss<-0
+  i<-1
+  arrive<-cumulative_sens[i]
+  live<-arrive+miss
+  detect[1]<-cumulative_sens[i]*dwell_detect_rate[i]
+  miss<-cumulative_sens[i]*(1-dwell_detect_rate[i])
+  if (length(cumulative_sens)>1){
+    for (i in 2:length(cumulative_sens))
+    {
+      #newly detectable cases
+      arrive<-cumulative_sens[i]-cumulative_sens[i-1]
+      live<-arrive+miss #currently detectable is newly detectable + missed at earlier stages
+      detect[i]<-live*dwell_detect_rate[i] #would detect all of them, but miss some of them due to timing
+      miss<-live*(1-dwell_detect_rate[i])
+    }
+  }
+  arrive<-1-cumulative_sens[i] #final miss
+  live=arrive+miss
+  #detect[1-4] is detected at each stage
+  #clinical detect= miss[4]
+  list(intercept=detect,clinical=live)
+}#effective_sens
+
+add_survival_to_stage_shift <- function(incidence_sens_source,incidence_intercepted){
+  #add survival: original before shift, and shifted survival
+  #using 5 year survival as "crude estimate of statistical cure"
+  #unlikely to be affected by 1-2 year lead time significantly
+  #extract survival by 'stage_at_detection'
+
+  just_survival <- incidence_sens_source %>%
+    mutate(prequel=match(Stage,xStage)) %>%
+    select(Cancer,prequel,Survival) %>%
+    filter(!is.na(prequel))
+  
+  intercept_survival <- incidence_intercepted %>%
+    left_join(just_survival %>%
+                select(Cancer,prequel,s_survival=Survival),by=c("Cancer","prequel")) %>% 
+    left_join(just_survival %>% 
+                select(Cancer,clinical=prequel,c_survival=Survival),by=c("Cancer","clinical")) 
+  
+  #compute absolute numbers rather than local rates
+  intercept_survival<-intercept_survival %>%
+    mutate(original_survivors=c_survival*caught,
+           shifted_survivors=s_survival*caught,
+           original_deaths=(1-c_survival)*caught,
+           shifted_deaths=(1-s_survival)*caught)
+  intercept_survival
+}
+
+compute_effective_detection_with_slip <- function(incidence_sens_source, dwell_slip_df, 
+  active_slip_clinical){
+  #just detection rate
+  just_detection <- incidence_sens_source %>%
+    mutate(number_stage=match(Stage,xStage),
+           prequel=number_stage,
+           detect=iso_sens) %>%
+    select(Cancer,prequel,detect)
+  
+  #differences - marginal detection rate of remaining cases 
+  #given that cases already detectable at earlier stage were removed or treated separately
+  just_delta <- just_detection %>%
+    group_by(Cancer) %>%
+    arrange(prequel,.by_group=TRUE) %>%
+    mutate(delta_detect=diff(c(0,detect))) %>%
+    ungroup() %>%
+    arrange(Cancer)
+  
+  #modify using slip rate
+  #intercept using slip rate
+  #slip to next
+  
+  #include modification of slip rate by clinical stage of detection
+  #extra 'parameter'
+  just_slip_delta_extra <- just_delta %>%
+    left_join(dwell_slip_df %>% 
+                #filter(scenario==dw_scenario) %>% 
+                select(Cancer,prequel=number_stage,slip,slip_clinical),by=c("Cancer","prequel")) %>%
+    filter(!is.na(prequel)) %>%
+    mutate(unroll=4) %>%
+    uncount(unroll,.id="clinical") %>%
+    filter(clinical>=prequel) %>%
+    mutate(modified_slip=case_when(prequel<clinical ~ slip,
+                                   prequel==clinical & active_slip_clinical ~ slip_clinical,
+                                   prequel==clinical & !active_slip_clinical ~ slip,
+                                   TRUE ~ 1.0)) %>%
+    arrange(Cancer,clinical,prequel) %>%
+    group_by(Cancer,clinical) %>%
+    mutate(sens_slip=effective_sens(detect,1-modified_slip)$intercept) %>%
+    ungroup()
+  
+  just_slip_delta_extra
+}
+
+
+
+
+run_intercept_model <- function(incidence_sens_source, dwell_slip_df, active_slip_clinical=TRUE){
+  
+  #set up all previous stages where cases could be intercepted given clinical detection
+  incidence_set<-incidence_sens_source %>% 
+    filter(Stage %in% xStage) %>%
+    select(Cancer,Stage,IR) %>%
+    mutate(number_stage=match(Stage,xStage),
+           clinical=number_stage,
+           unroll=number_stage) %>%
+    uncount(unroll,.id="prequel")
+  
+  #compute effective detection by stage conditional on slip rate model
+  just_slip_delta_extra <- compute_effective_detection_with_slip(incidence_sens_source,
+                                                               dwell_slip_df, 
+                                                               active_slip_clinical)
+  
+  #updated: split effective slip rate in 2 for last stage
+  #as the "time spent" should be halved
+  #this involves a more elaborate model
+  #note that "lives saved" is not affected, because those individuals are not stage shifted
+  #this assumes that 'stage 4' is just automatically halved anyway
+  incidence_intercepted <- incidence_set %>%
+    left_join(just_slip_delta_extra,by=c("Cancer","clinical","prequel")) %>% 
+    mutate(unroll=1+(number_stage==prequel)) %>%
+    uncount(unroll,.id="found_clinical") %>%
+    group_by(Cancer,clinical) %>%
+    mutate(c_slip=cumsum(sens_slip),
+           delta_detect=case_when(
+             found_clinical==2 ~ 1-c_slip+sens_slip, #anyone not caught by new screening must be found clinically
+             TRUE ~ sens_slip)) %>%
+    mutate(caught=IR*delta_detect) %>%
+    ungroup()
+  
+  intercept_survival <- add_survival_to_stage_shift(incidence_sens_source,incidence_intercepted)
+  
+  intercept_survival
+}
+
+
+run_excluded_model <- function(excluded_source){
+  #fills out individuals not staged as they are not modeled
+  excluded_survival <- excluded_source %>%
+    mutate(number_stage=0,
+           clinical=0,
+           prequel=0,
+           detect=0.0,
+           delta_detect=0.0,
+           slip=1.0,
+           slip_clinical=1.0,
+           modified_slip=1.0,
+           sens_slip=0.0,
+           found_clinical=2,
+           c_slip=1.0,
+           caught=IR,
+           s_survival=Survival,
+           c_survival=Survival) %>%
+    mutate(original_survivors=c_survival*caught,
+           shifted_survivors=s_survival*caught,
+           original_deaths=(1-c_survival)*caught,
+           shifted_deaths=(1-s_survival)*caught) %>%
+    select(Cancer,Stage,IR,
+           number_stage,clinical,prequel,
+           detect,delta_detect,
+           slip,slip_clinical,modified_slip,sens_slip,
+           found_clinical,c_slip,
+           caught,
+           s_survival,c_survival,
+           original_survivors,shifted_survivors,
+           original_deaths,shifted_deaths)
+  
+  excluded_survival
+ }
+
+```
+
+
+## Continue 
+
+
+```{r m1a-Basic-interception-model}
+
+dwell_standard_model <- load_seer_dwell_model()
+
+#read in standard performance numbers
+base_detect_code <- "CCGA2"
+
+#load and clean manuscript sensitivity
+iso_sens_joined <- read_tsv(
+  file.path(tables_DIR, paste0(INPUT_DATE_CODE, "_iso_seer_manuscript.tsv")))
+
+
+#remove everything not staged for initial analysis
+incidence_sens_source <- iso_sens_joined %>% 
+  filter(Stage!="NotStaged") %>%
+  mutate(iso_sens=sens)
+
+#keep not staged for adding back
+incidence_excluded_source <- iso_sens_joined %>%
+  filter(Stage=="NotStaged")
+
+
+##dwell time
+#annual screening examined here for sensitivity
+#generate exact slip rates
+dwell_slip_rate <- 
+  exact_slip_rate_from_dwell(dwell_standard_model,screen_interval=1,weibull_shape=1)
+
+#generate prevalent slip rate by clever use of very large interval and multiplying expectation
+long_interval <- 100
+dwell_prevalent_rate <- 
+  exact_slip_rate_from_dwell(dwell_standard_model,screen_interval=long_interval,weibull_shape=1)
+
+#no screening is happening, therefore nothing is ever intercepted
+dwell_no_rate <- dwell_slip_rate %>% 
+  mutate(slip=1.0,
+         slip_clinical=1.0)
+
+#accumulate 4 dwell scenarios
+# prevalent and incident results
+# plus perfect screening
+# plus no screening
+my_list <- vector("list",4*2+2)
+k <- 1
+
+for (dw_scenario in 1:4){
+  print(k)
+
+  local_performance <- run_intercept_model(
+    incidence_sens_source,
+    dwell_slip_rate %>% 
+       filter(scenario==dw_scenario))
+
+  local_excluded <- run_excluded_model(incidence_excluded_source) #does not depend on scenario
+
+  local_performance <- bind_rows(local_performance,local_excluded)
+  
+  incident_performance <- local_performance
+  local_performance <- local_performance %>%
+    mutate(screen_interval=1,
+           dw_scenario=dw_scenario,
+           scan="incident")
+  
+  my_list[[k]] <- local_performance
+  k <- k+1
+  
+  #generate prevalent round starting off screening
+  #only going to use caught by cfdna and combine with incident
+  #because expected rates = average over all years, we can reverse identity
+  #to obtain first-year screen by multiplying
+  #rather than doing a special integral for prevalent rounds
+  prevalent_performance <- run_intercept_model(
+    incidence_sens_source,
+    dwell_prevalent_rate %>% 
+        filter(scenario==dw_scenario))
+  
+  prevalent_performance <- prevalent_performance %>% 
+    filter(found_clinical==1) %>%
+    mutate(caught=caught*long_interval,
+           original_survivors=original_survivors*long_interval,
+           shifted_survivors=shifted_survivors*long_interval,
+           original_deaths=original_deaths*long_interval,
+           shifted_deaths=shifted_deaths*long_interval) %>%
+    bind_rows(incident_performance %>% 
+                filter(found_clinical==2))
+  
+  prevalent_performance <- prevalent_performance %>%
+    mutate(screen_interval=1,
+           dw_scenario=dw_scenario,
+           scan="prevalent")
+  my_list[[k]] <- prevalent_performance
+  k <- k+1
+}
+
+```
+
+Continue (this code is pretty much intractable, tidyversy notwithstanding...)
+
+```{r m1a-Basic-interception-model-2}
+
+#this is the MIS scenario where schedule sensitivity is perfect so slip rates are 0
+optimal_performance <- run_intercept_model( 
+  incidence_sens_source,
+  dwell_slip_rate %>% 
+     filter(scenario==0))
+optimal_excluded <- run_excluded_model(incidence_excluded_source) #does not depend on scenario
+optimal_performance <- bind_rows(optimal_performance,optimal_excluded)
+optimal_performance <- optimal_performance %>% mutate(opt="0",dw_scenario=0,scan="incident")
+
+#no screening so nothing found by cfdna operations
+no_screening_performance <- run_intercept_model(
+  incidence_sens_source,
+  dwell_no_rate %>%
+    filter(scenario==0))
+
+no_screening_performance <- bind_rows(no_screening_performance, optimal_excluded) %>%
+  mutate(opt="NO",dw_scenario=0,scan="no")
+
+all_options_df <- bind_rows(my_list,.id="opt") %>%
+  bind_rows(optimal_performance) %>%
+  bind_rows(no_screening_performance)
+
+
+#Now we have the full, detailed data frame
+#add some helper text fields to clarify states represented by each line of the file 
+text_options_df <- all_options_df %>%
+  select(opt,Cancer,clinical,prequel,found_clinical,
+         caught,s_survival,c_survival, 
+         original_survivors,shifted_survivors,
+         original_deaths,shifted_deaths,
+         screen_interval,dw_scenario,scan) %>%
+  mutate(mode_found=c("cfdna","soc")[found_clinical],
+         aggressive=c("MIS","VSlow","Slow","Fast","AggFast")[dw_scenario+1])
+
+### UP TO HERE !!!
+reports_DIR <- ...
+
+#write to permanent archive of current data
+write_tsv(text_options_df,
+ path=file.path(tables_DIR, ("reports/%s_%s_text_data_set.tsv",date_code,base_detect_code)) 
 
 
 
